<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
            android:id="@+id/dialog_projection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/dialog_projection_name_hint"
    />

    <EditText
            android:id="@+id/dialog_projection_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number|numberDecimal|numberSigned"
            android:digits="0123456789.-"
            android:hint="@string/dialog_projection_lat_hint"
    />

    <EditText
            android:id="@+id/dialog_projection_lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number|numberDecimal|numberSigned"
            android:digits="0123456789.-"
            android:hint="@string/dialog_projection_lon_hint"
    />

    <EditText
        android:id="@+id/dialog_projection_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:digits="0123456789."
        android:hint="@string/dialog_projection_distance_hint"
        android:inputType="number|numberDecimal" />
    <EditText
        android:id="@+id/dialog_projection_angle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:hint="@string/dialog_projection_angle_hint"
        />
    <CheckBox
        android:id="@+id/dialog_projection_use_declination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/dialog_projection_use_declination_hint"

        />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/dialog_projection_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/button_ok">
        </Button>
        <Button
                android:id="@+id/dialog_projection_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cancel">
        </Button>
    </LinearLayout>
</LinearLayout>