<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


    <TextView
            android:id="@+id/pointDataLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_data"
            android:textSize="26sp">
    </TextView>
    <TextView
            android:id="@+id/pointData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <TextView
            android:id="@+id/tvTitleGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_gps"
            android:textSize="26sp">
    </TextView>
    <TextView
            android:id="@+id/tvEnabledGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <TextView
            android:id="@+id/tvStatusGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <TextView
            android:id="@+id/tvLocationGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <TextView
            android:id="@+id/tvTitleNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/provider_network"
            android:textSize="26sp">
    </TextView>
    <TextView
            android:id="@+id/tvEnabledNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <TextView
            android:id="@+id/tvStatusNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <TextView
            android:id="@+id/tvLocationNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp">
    </TextView>
    <Button
            android:id="@+id/btnLocationSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickLocationSettings"
            android:text="@string/location_settings">
    </Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>